# ccc-website-app

./: pyproject.toml  setup.py
ccc_website/: api.py
ccc_website/ccc_website/: builder_scripts.py  hooks.py
ccc_website/ccc_website/doctype/ccc_company_settings/: ccc_company_settings.json  ccc_company_settings.py
ccc_website/ccc_website/doctype/ccc_contact_person/: ccc_contact_person.json  ccc_contact_person.py
ccc_website/ccc_website/doctype/ccc_faq/: ccc_faq.json  ccc_faq.py
ccc_website/ccc_website/doctype/ccc_news_article/: ccc_news_article.json  ccc_news_article.py
ccc_website/ccc_website/doctype/ccc_process_step/: ccc_process_step.json  ccc_process_step.py
ccc_website/ccc_website/doctype/ccc_service/: ccc_service.json  ccc_service.py
ccc_website/ccc_website/doctype/ccc_stat/: ccc_stat.json  ccc_stat.py
ccc_website/ccc_website/doctype/ccc_testimonial/: ccc_testimonial.json  ccc_testimonial.py
ccc_website/ccc_website/public/css/: ccc_website.css
ccc_website/ccc_website/public/js/: ccc_website.js
ccc_website/workspace/ccc_website/: ccc_website.json
